# medad

./: .gitignore  AGENTS.md  README.md  pyproject.toml
examples/skills/commit-message/: SKILL.md
examples/skills/review-diff/: SKILL.md
src/medad/: __init__.py  agent.py  cli.py  commands.py  config.py  mcp.py  permissions.py  sandbox.py  session.py  skills.py
src/medad/prompts/: system.md
src/medad/ui/: approval.py  render.py  repl.py
tests/: test_agent_build.py  test_commands_phase3.py  test_config.py  test_mcp.py  test_permissions.py  test_repl_turn.py  test_sandbox.py  test_skills.py  test_subagents_memory.py
