[project]
name = "medad"
version = "0.3.0"
description = "medad — a Claude-Code-like terminal coding harness built on LangChain Deep Agents"
readme = "README.md"
authors = [
    { name = "behradkhodayar", email = "behrad.khodayar@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.12",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.3",
    "langchain-openrouter>=0.2.5",
    "langchain[anthropic]>=1.3.11",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "prompt-toolkit>=3.0.52",
    "pyyaml>=6",
    "rich>=15.0.0",
    "typer>=0.26.8",
]

[project.scripts]
medad = "medad.cli:app"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
